// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scenario: starting a game as the host of the game when the minimum number of player is reached given the authenticated user being player42 and the lobby containing a game with id game42 with more than 4 players in it when player42 starts the game42 then the lobby should not contain game42 anymore: game42 should have its players order defined and the deck shuffled 1`] = `
Object {
  "deck": Array [
    39,
    76,
    69,
    32,
    16,
    41,
    55,
    15,
    79,
    25,
    52,
    11,
    51,
    57,
    82,
    38,
    47,
    72,
    18,
    66,
    78,
    3,
    17,
    70,
    26,
    42,
    7,
    59,
    77,
    68,
    6,
    12,
    67,
    28,
    49,
    56,
    21,
    31,
    60,
    61,
    62,
    24,
    48,
    74,
    20,
    75,
    27,
    29,
    71,
    5,
    81,
    40,
    53,
    50,
    0,
    22,
    37,
    73,
    43,
    2,
    13,
    36,
    45,
    83,
    44,
    54,
    10,
    1,
    19,
    34,
    33,
    80,
    63,
    64,
    4,
    65,
    8,
    46,
    58,
    14,
    30,
    35,
    9,
    23,
  ],
  "gameId": "game42",
  "players": Array [
    Object {
      "id": "player43",
      "name": "player 43",
      "points": 0,
    },
    Object {
      "id": "player45",
      "name": "player 45",
      "points": 0,
    },
    Object {
      "id": "player44",
      "name": "player 44",
      "points": 0,
    },
    Object {
      "id": "player42",
      "name": "player 42",
      "points": 0,
    },
  ],
  "remainingCardsInDrawPile": undefined,
}
`;

exports[`Scenario: starting a game as the host of the game when the minimum number of player is reached given the authenticated user being player42 and the lobby containing a game with id game42 with more than 4 players in it when player42 starts the game42 then the lobby should not contain game42 anymore: game42 should not be started 1`] = `
Object {
  "deck": Array [],
  "gameId": "game42",
  "players": Array [],
  "remainingCardsInDrawPile": undefined,
}
`;

exports[`Scenario: starting a game as the host of the game when the minimum number of player is reached given the authenticated user being player42 and the lobby containing a game with id game42 with more than 4 players in it when player42 starts the game42 then the lobby should not contain game42 anymore: lobby should contain the game42 with player 42, player 43, player 44 and player 45 in it 1`] = `
Object {
  "games": Object {
    "game42": Object {
      "id": "game42",
      "players": Array [
        Object {
          "id": "player42",
          "name": "player 42",
        },
        Object {
          "id": "player43",
          "name": "player 43",
        },
        Object {
          "id": "player44",
          "name": "player 44",
        },
        Object {
          "id": "player45",
          "name": "player 45",
        },
      ],
    },
  },
}
`;

exports[`Scenario: starting a game as the host of the game when the minimum number of player is reached given the authenticated user being player42 and the lobby containing a game with id game42 with more than 4 players in it when player42 starts the game42 then the lobby should not contain game42 anymore: lobby should not contain the game42 anymore 1`] = `
Object {
  "games": Object {},
}
`;

exports[`Scenario: starting a game when I'm the last player (reaching max players) given the authenticated user being player41 and the lobby containing a game with id game42 with 5 players in it when player41 join the game42 then game42 should be started and the lobby should not contain game42 anymore: lobby should contain the game42 with player 42, player 43, player 44, player 45 and player 46 in it 1`] = `
Object {
  "games": Object {
    "game42": Object {
      "id": "game42",
      "players": Array [
        Object {
          "id": "player42",
          "name": "player 42",
        },
        Object {
          "id": "player43",
          "name": "player 43",
        },
        Object {
          "id": "player44",
          "name": "player 44",
        },
        Object {
          "id": "player45",
          "name": "player 45",
        },
        Object {
          "id": "player46",
          "name": "player 46",
        },
      ],
    },
  },
}
`;

exports[`Scenario: starting a game when I'm the last player (reaching max players) given the authenticated user being player41 and the lobby containing a game with id game42 with 5 players in it when player41 join the game42 then game42 should be started and the lobby should not contain game42 anymore: lobby should not contain the game42 anymore 1`] = `
Object {
  "games": Object {},
}
`;
